--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,18 +25,22 @@ jobs:
         run: ./checkout.py --target-os ${{ matrix.targetOs }} --revision $VERSION
 
       - name: Create source tarball
-        run: ./export_tarball.py chromium-$VERSION-${{ matrix.targetOs }} --version $VERSION --src-dir src --progress
+        run: |
+          ./export_tarball.py chromium-$VERSION-${{ matrix.targetOs }} --version $VERSION --src-dir src --progress
+          ls -lh *.tar.xz
 
       - name: Upload Binary Files
         uses: actions/upload-artifact@v3
         with:
-          path: chromium-$VERSION-${{ matrix.targetOs }}.tar.xz
+          path: '*.tar.xz'
           retention-days: 1
 
   release:
     if: startsWith(github.ref, 'refs/tags/')
     needs: [build]
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Download Files
